--- a/server/plugins/parsers/gga_parser.py.dist
+++ b/server/plugins/parsers/gga_parser.py.dist
@@ -1,69 +1,66 @@
-# =================================================================================== #
-#
-#         FILE:  gga_parser.py
-#
-#        USAGE:  gga_parser.py [-h] [-v+] [--timeFormat] [--startDT] [--stopDT] <dataFile>
-#
-#  DESCRIPTION:  Parse the supplied NMEA-formtted GGA file and return the json-
-#                formatted string used by OpenVDM as part of it's Data dashboard.
-#
-#      OPTIONS:  [-h] Return the help message.
-#                [-v] Increase verbosity (default: warning)
-#                [--timeFormat] date/time format to use when parsing datafile, default
-#                               yyyy-mm-ddTHH:MM:SS.sssZ
-#                [--startTS] optional start crop time (strptime format)
-#                [--stopTS] optional stop crop time (strptime format)
-#                <dataFile> Full or relative path of the data file to process.
-#
-# REQUIREMENTS:  Python3.8
-#                Python Modules:
-#                    geopy==2.1.0
-#                    numpy==1.19.5
-#                    pandas==1.2.0
-#                    PyYAML==5.3.1
-#                    requests==2.25.1
-#
-#         BUGS:
-#        NOTES:
-#       AUTHOR:  Webb Pinner
-#      COMPANY:  Capable Solutions
-#      VERSION:  2.5
-#      CREATED:  2016-08-29
-#     REVISION:  2021-01-16
-#
-# LICENSE INFO:  Open Vessel Data Management v2.5 (OpenVDMv2)
-#                Copyright (C) 2021 OceanDataRat.org
-#
-#    This program is free software: you can redistribute it and/or modify it under the
-#    terms of the GNU General Public License as published by the Free Software
-#    Foundation, either version 3 of the License, or (at your option) any later version.
-#
-#    This program is distributed in the hope that it will be useful, but WITHOUT ANY
-#    WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
-#    PARTICULAR PURPOSE.  See the GNU General Public License for more details.
-#
-#    You should have received a copy of the GNU General Public License #    along with
-#    this program.  If not, see <http://www.gnu.org/licenses/>.
-#
-# =================================================================================== #
+#!/usr/bin/env python3
+"""
+FILE:  gga_parser.py
 
-import os
+USAGE:  gga_parser.py [-h] [-v+] [--timeFormat] [--startDT] [--stopDT] <dataFile>
+
+DESCRIPTION:  Parse the supplied NMEA-formtted GGA file and return the json-
+    formatted string used by OpenVDM as part of it's Data dashboard.
+
+  OPTIONS:  [-h] Return the help message.
+            [-v] Increase verbosity (default: warning)
+            [--timeFormat] date/time format to use when parsing datafile, default
+                           yyyy-mm-ddTHH:MM:SS.sssZ
+            [--startTS] optional start crop time (strptime format)
+            [--stopTS] optional stop crop time (strptime format)
+            <dataFile> Full or relative path of the data file to process.
+
+REQUIREMENTS:  Python3.8
+            Python Modules:
+                geopy==2.1.0
+                numpy==1.19.5
+                pandas==1.2.0
+                PyYAML==5.3.1
+                requests==2.25.1
+
+     BUGS:
+    NOTES:
+   AUTHOR:  Webb Pinner
+  COMPANY:  Capable Solutions
+  VERSION:  2.5
+  CREATED:  2016-08-29
+ REVISION:  2021-01-16
+
+LICENSE INFO:  Open Vessel Data Management v2.5 (OpenVDMv2)
+Copyright (C) 2021 OceanDataRat.org
+
+This program is free software: you can redistribute it and/or modify it under the
+terms of the GNU General Public License as published by the Free Software
+Foundation, either version 3 of the License, or (at your option) any later version.
+
+This program is distributed in the hope that it will be useful, but WITHOUT ANY
+WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A
+PARTICULAR PURPOSE.  See the GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License along with
+this program.  If not, see <http://www.gnu.org/licenses/>.
+"""
+
 import sys
 import csv
 import json
-import pandas as pd
-import numpy as np
-import argparse
 import logging
 from datetime import datetime
+from os.path import dirname, realpath
+import pandas as pd
+import numpy as np
 from geopy import Point
 from geopy.distance import great_circle
 
-from os.path import dirname, realpath
 sys.path.append(dirname(dirname(dirname(dirname(realpath(__file__))))))
 
 from server.lib.openvdm_plugin import OpenVDMCSVParser
-from server.lib.openvdm import OpenVDM_API
+from server.lib.openvdm import OpenVDM
 
 # RAW_COLS = ['date_time','hdr','gps_time','latitude','NS','longitude','EW','fix_quality','num_satellites','hdop','altitude','altitude_m','height_wgs84','height_wgs84_m','last_update','dgps_station_checksum'] # OpenRVDAS style
 RAW_COLS = ['date','time','hdr','gps_time','latitude','NS','longitude','EW','fix_quality','num_satellites','hdop','altitude','altitude_m','height_wgs84','height_wgs84_m','last_update','dgps_station_checksum'] # SCS style
@@ -82,30 +79,36 @@ DEFAULT_TIME_FORMAT = "%m/%d/%Y %H:%M:%S.%f" # SCS style
 
 
 class GGAParser(OpenVDMCSVParser):
+    """
+    Custom OpenVDM CSV file parser
+    """
 
     def __init__(self, start_dt=None, stop_dt=None, time_format=DEFAULT_TIME_FORMAT, use_openvdm_api=True):
         super().__init__(start_dt=start_dt, stop_dt=stop_dt)
         self.raw_cols = RAW_COLS
         self.proc_cols = PROC_COLS
         self.time_format = time_format
-        self.openvdm = OpenVDM_API() if use_openvdm_api else None
+        self.openvdm = OpenVDM() if use_openvdm_api else None
 
-
-    def _hemisphere_correction(self, lat_lon, hemisphere):
-        if hemisphere == 'W' or hemisphere == "S":
+    @staticmethod
+    def _hemisphere_correction(lat_lon, hemisphere):
+        if hemisphere in ('W', "S"):
             return lat_lon * -1.0
 
         return lat_lon
 
 
-    def process_file(self, filePath):
+    def process_file(self, filepath): # pylint: disable=too-many-locals,too-many-branches,too-many-statements
+        """
+        Process the provided file
+        """
 
         raw_into_df = { value: [] for key, value in enumerate(self.proc_cols) }
 
         logging.debug("Parsing data file...")
         errors = []
         try:
-            with open(filePath, 'r') as csvfile:
+            with open(filepath, 'r') as csvfile:
                 reader = csv.DictReader(csvfile, self.raw_cols)
 
                 for lineno, line in enumerate(reader):
@@ -113,7 +116,7 @@ class GGAParser(OpenVDMCSVParser):
                     try:
                         # date_time = line['date_time'] # OpenRVDAS style
                         date_time = ' '.join([line['date'], line['time']]) # SCS style
-                        
+
                         longitude = (self._hemisphere_correction(float(line['longitude'][:3]) + float(line['longitude'][3:])/60, line['EW']))
                         latitude = (self._hemisphere_correction(float(line['latitude'][:2]) + float(line['latitude'][2:])/60, line['NS']))
                         num_satellites = int(line['num_satellites'])
@@ -123,7 +126,7 @@ class GGAParser(OpenVDMCSVParser):
 
                     except Exception as err:
                         errors.append(lineno)
-                        logging.warning("Parsing error encountered on line {}".format(lineno))
+                        logging.warning("Parsing error encountered on line %s", lineno)
                         logging.debug(line)
                         logging.debug(str(err))
 
@@ -137,16 +140,16 @@ class GGAParser(OpenVDMCSVParser):
                         raw_into_df['height_wgs84'].append(height_wgs84)
 
         except Exception as err:
-            logging.error("Problem accessing input file: {}".format(filePath))
+            logging.error("Problem accessing input file: %s", filepath)
             logging.error(str(err))
-            return None
+            return
 
         logging.debug("Finished parsing data file")
-        
+
         # If no data ingested from file, quit
         if len(raw_into_df['date_time']) == 0:
             logging.warning("Dataframe is empty... quitting")
-            return None
+            return
 
         # Build DataFrame
         logging.debug("Building dataframe from parsed data...")
@@ -154,7 +157,7 @@ class GGAParser(OpenVDMCSVParser):
 
         # Convert Date/time column to datetime objects
         logging.debug("Converting data_time to datetime datatype...")
-        
+
         df_proc['date_time'] = pd.to_datetime(df_proc['date_time'], format=self.time_format)
 
         # Optionally crop data by start/stop times
@@ -166,7 +169,7 @@ class GGAParser(OpenVDMCSVParser):
         # If the crop operation emptied the dataframe, quit
         if df_proc.shape[0] == 0:
             logging.warning("Cropped dataframe is empty... quitting")
-            return None
+            return
 
         # Calculate deltaT column
         logging.debug('Building deltaT column...')
@@ -177,7 +180,7 @@ class GGAParser(OpenVDMCSVParser):
         df_proc['point'] = df_proc.apply(lambda row: Point(latitude=row['latitude'], longitude=row['longitude']), axis=1)
         df_proc['point_next'] = df_proc['point'].shift(1)
         df_proc.loc[df_proc['point_next'].isna(), 'point_next'] = None
-        
+
         df_proc['distance'] = df_proc.apply(lambda row: great_circle(row['point'], row['point_next']).nm if row['point_next'] is not None else float('nan'), axis=1)
         df_proc = df_proc.drop('point_next', axis=1)
         df_proc = df_proc.drop('point', axis=1)
@@ -237,7 +240,7 @@ class GGAParser(OpenVDMCSVParser):
         df_proc = self.resample_data(df_proc)
 
         # round data
-        logging.debug("Rounding data: {}".format(ROUNDING))
+        logging.debug("Rounding data: %s", ROUNDING)
         df_proc = self.round_data(df_proc, ROUNDING)
 
         # split data where there are gaps
@@ -245,43 +248,45 @@ class GGAParser(OpenVDMCSVParser):
         events = np.split(df_proc, np.where(np.isnan(df_proc['latitude']))[0])
 
         # removing NaN entries
-        events = [ev[~np.isnan(ev.latitude)] for ev in events if not isinstance(ev, np.ndarray)]
+        events = [event[~np.isnan(event.latitude)] for event in events if not isinstance(event, np.ndarray)]
 
         # removing empty DataFrames
-        events = [ev for ev in events if not ev.empty]
+        events = [event for event in events if not event.empty]
 
-        visualizerDataObj = {
+        visualizer_data_obj = {
             'type':'FeatureCollection',
             'features': []
         }
 
-        for ev in events:
-            # logging.debug("EV: {}".format(ev))
+        for event in events:
+            # logging.debug("EV: %s".format(ev))
             feature = {
                 'type':'Feature',
                 'geometry':{
                     'type':'LineString',
-                    'coordinates':json.loads(ev[['longitude','latitude']].to_json(orient='values'))
+                    'coordinates':json.loads(event[['longitude','latitude']].to_json(orient='values'))
                 },
                 'properties': {
-                    'coordTimes': json.loads(ev['date_time'].to_json(orient='values')),
-                    'name': filePath
+                    'coordTimes': json.loads(event['date_time'].to_json(orient='values')),
+                    'name': filepath
                 }
             }
             #print(feature)
-            visualizerDataObj['features'].append(feature)
+            visualizer_data_obj['features'].append(feature)
 
-        self.add_visualization_data(visualizerDataObj)
+        self.add_visualization_data(visualizer_data_obj)
 
         # send message about errors encountered to OpenVDM
         if self.openvdm is not None and len(errors) > 0:
-            self.openvdm.sendMsg('Parsing Error', 'Error(s) parsing datafile {} on row(s): {}'.format(filePath, ', '.join([str(error) for error in errors])))
+            self.openvdm.send_msg('Parsing Error', 'Error(s) parsing datafile {} on row(s): {}'.format(filepath, ', '.join([str(error) for error in errors])))
 
 
 # -------------------------------------------------------------------------------------
 # Required python code for running the script as a stand-alone utility
 # -------------------------------------------------------------------------------------
 if __name__ == "__main__":
+    import argparse
+
     parser = argparse.ArgumentParser(description='Parse NMEA GGA data')
     parser.add_argument('-v', '--verbosity', dest='verbosity',
                         default=0, action='count',
@@ -302,7 +307,7 @@ if __name__ == "__main__":
     ############################
     # Set up logging before we do any other argument parsing (so that we
     # can log problems with argument parsing).
-    
+
     LOGGING_FORMAT = '%(asctime)-15s %(levelname)s - %(message)s'
     logging.basicConfig(format=LOGGING_FORMAT)
 
@@ -313,11 +318,10 @@ if __name__ == "__main__":
     ovdm_parser = GGAParser(start_dt=parsed_args.startDT, stop_dt=parsed_args.stopDT, time_format=parsed_args.timeFormat, use_openvdm_api=False)
 
     try:
-        logging.info("Processing file: {}".format(parsed_args.dataFile))
+        logging.info("Processing file: %s", parsed_args.dataFile)
         ovdm_parser.process_file(parsed_args.dataFile)
-        print(ovdm_parser.toJSON())
+        print(ovdm_parser.to_json())
         logging.info("Done!")
     except Exception as err:
         logging.error(str(err))
         raise err
-        sys.exit(1)
